fixed  https://trello.com/c/NvYbKRRh/30-radio-buttons-not-aligned-with-the-horizontal-ligne  https://trello.com/c/BQaJ9peO/19-increase-the-space-between-the-lines-in-all-pages-need-to-be-concistent-at-the-same-time  https://trello.com/c/hBuips8y/26-drop-down https://trello.com/c/Ic72JedO/20-replace-activities-by-activity https://trello.com/c/yoHpQfNe/27-drop-down https://trello.com/c/7GlLE0rl/13-compare-fonts

--- a/style.css
+++ b/style.css
@@ -183,6 +183,10 @@ body{
   padding-left: 0px;
 }
 
+/* select{
+  text-align-last:center;
+}
+ */
 /*Change the glow color from blue to orange*/ 
 .form-control:focus {
   border-color: #f15848;
